2013-04-10 Arno Dudek  <webmaster@adgrafik.at>

1.0.1	[BUGFIX] Fixed query for addresses and address groups. Set setRespectStoragePage to FALSE.
		[BUGFIX] Fixed Tx_Extbase_Persistence_LazyLoadingStorage to Tx_Extbase_Persistence_LazyLoadingProxy in models.
		[FEATUER] Added optional sorting for tt_address columns.

1.0.0	First release. Moved from ad_google_maps